--- a/JS DSA/practice/my-react-app/src/index.css
+++ b/JS DSA/practice/my-react-app/src/index.css
@@ -1,11 +1,25 @@
-.student {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 2em;
-  padding: 10px;
-  border: 1px solid purple;
-  margin: 10px;
+.counter-container{
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.student p{
-  margin:0;
+.count-display{
+    font-size: 3em;
+    margin-top: 0;
+    margin-bottom: 50px;
+}
+
+.counter-button{
+    font-size: 3em;
+    margin: 10px;
+     background-color: blueviolet;
+     color: black;
+     border: none;
+     cursor: pointer;
+     border-radius: 8px;
+
+}
+
+.counter-button:hover {
+    background-color: cornflowerblue;
 }
